--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 
 plugins {
+//noinspection GroovyAssignabilityCheck
     id 'java'
+//noinspection GroovyAssignabilityCheck
     id 'maven-publish'
+//noinspection GroovyAssignabilityCheck
     id 'org.jetbrains.kotlin.jvm' version "1.4.0"
 }
 ext{
@@ -9,15 +12,16 @@ ext{
     okhttp = '4.8.1'
     coroutines = '1.3.9'
     junit = '4.12'
-    log = '8.1.0'
+//noinspection GroovyAssignabilityCheck
     kotlin = '1.4.0'
 }
 group 'tk.mallumo'
-version '1.9.0'
+version '2.0.0'
 
 repositories {
     mavenCentral()
     maven {
+//        url = uri("https://oss.sonatype.org/content/repositories/snapshots")
         url = uri("https://mallumo.jfrog.io/artifactory/gradle-dev-local")
     }
 }
@@ -26,7 +30,6 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib"
     api "com.squareup.okhttp3:okhttp:$okhttp"
     api "com.google.code.gson:gson:$gson"
-    api "tk.mallumo:log:$log"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     testCompile "junit:junit:$junit"
 }
@@ -36,9 +39,12 @@ publishing {
     repositories {
         maven {
             name = "mallumo.jfrog.io"
+//noinspection GroovyAssignabilityCheck
             url = project.findProperty("jfrog.url")
             credentials {
+//noinspection GroovyAssignabilityCheck
                 username = project.findProperty("jfrog.name")
+//noinspection GroovyAssignabilityCheck
                 password = project.findProperty("jfrog.pass")
             }
         }
@@ -47,11 +53,17 @@ publishing {
         }
     }
     publications {
+//noinspection GroovyAssignabilityCheck
         gpr(MavenPublication) {
+//noinspection GroovyAssignabilityCheck
             groupId = "$group"
+//noinspection GroovyAssignabilityCheck
             artifactId = "${project.name}"
+//noinspection GroovyAssignabilityCheck
             version = "$version"
+//noinspection GroovyAssignabilityCheck
             artifact kotlinSourcesJar
+//noinspection GroovyAssignabilityCheck
             from(components.java)
         }
     }
