--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
-        gson = '2.8.5'
+        gson = '2.8.6'
         okhttp = '4.8.1'
         coroutines = '1.3.9'
         junit = '4.12'
-        kotlinV = '1.4.0'
-        http_version = '2.1.1'
+        kotlinV = '1.4.20'
+        http_version = '2.2.0'
     }
 }
 
@@ -24,7 +24,7 @@ repositories {
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib"
     api "com.squareup.okhttp3:okhttp:$okhttp"
-    api "com.google.code.gson:gson:$gson"
+    implementation "com.google.code.gson:gson:$gson"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     testCompile "junit:junit:$junit"
 }
